force-app/main/default/objects/Covid19WHOStats__c/Covid19WHOStats__c.object-meta.xml
<CustomObject>
    <label>Covid19WHOStat</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Covid19WHOStats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covid19WHOStats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>