force-app/main/default/objects/Covid19WHOStats__c/fields/Date_Reported__c.field-meta.xml
<CustomField>
    <fullName>Date_Reported__c</fullName>
    <label>Date Reported</label>
    <type>Date</type>
</CustomField>