force-app/main/default/objects/Covid19WHOStats__c/fields/New_Cases__c.field-meta.xml
<CustomField>
    <fullName>New_Cases__c</fullName>
    <label>New Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>