force-app/main/default/objects/Covid19WHOStats__c/fields/New_Deaths__c.field-meta.xml
<CustomField>
    <fullName>New_Deaths__c</fullName>
    <label>New Deaths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>