force-app/main/default/objects/Covid19WHOStats__c/fields/WHO_Region__c.field-meta.xml
<CustomField>
    <fullName>WHO_Region__c</fullName>
    <label>WHO Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>